--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<script type="text/javascript" src="js/pixi.js"></script>
 	<script type="text/javascript" src="javascript/main.js"></script>
 	<script type="text/javascript" src="javascript/key.js"></script>
+	<script type="text/javascript" src="javascript/setup.js"></script>
+	<script type="text/javascript" src="javascript/weapon.js"></script>
 </head>
 <body>
 	<script>
