--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<script type="text/javascript" src="javascript/main.js"></script>
 	<script type="text/javascript" src="javascript/key.js"></script>
 	<script type="text/javascript" src="javascript/setup.js"></script>
-	<script type="text/javascript" src="javascript/weapon.js"></script>
+	<script type="text/javascript" src="javascript/tools/Tool.js"></script>
+	<script type="text/javascript" src="javascript/tools/Hammer.js"></script>
+	<script type="text/javascript" src="javascript/tools/Chainsaw.js"></script>
+	<script type="text/javascript" src="javascript/util.js"></script>
 </head>
 <body>
 	<script>
