--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="javascript/tools/Tool.js"></script>
 	<script type="text/javascript" src="javascript/tools/Hammer.js"></script>
 	<script type="text/javascript" src="javascript/tools/Chainsaw.js"></script>
+	<script type="text/javascript" src="javascript/tools/Machinegun.js"></script>
 	<script type="text/javascript" src="javascript/util.js"></script>
 </head>
 <body>
