--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<script type="text/javascript" src="js/pixi.js"></script>
 	<script type="text/javascript" src="js/howler.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="javascript/main.js"></script>
 	<script type="text/javascript" src="javascript/key.js"></script>
 	<script type="text/javascript" src="javascript/setup.js"></script>
