--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="javascript/tools/Chainsaw.js"></script>
 	<script type="text/javascript" src="javascript/tools/Machinegun.js"></script>
 	<script type="text/javascript" src="javascript/tools/Flamethrower.js"></script>
+	<script type="text/javascript" src="javascript/tools/Colorthrower.js"></script>
 </head>
 <body>
 	<script>
