--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="javascript/tools/Machinegun.js"></script>
 	<script type="text/javascript" src="javascript/tools/Flamethrower.js"></script>
 	<script type="text/javascript" src="javascript/tools/Colorthrower.js"></script>
+	<script type="text/javascript" src="javascript/tools/Phaser.js"></script>
 	<script type="text/javascript" src="javascript/tools/Stamper.js"></script>
 </head>
 <body>
