--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<script type="text/javascript" src="javascript/tools/Colorthrower.js"></script>
 	<script type="text/javascript" src="javascript/tools/Phaser.js"></script>
 	<script type="text/javascript" src="javascript/tools/Stamper.js"></script>
+	<script type="text/javascript" src="javascript/Animator.js"></script>
+	<script type="text/javascript" src="javascript/Explosion.js"></script>
 </head>
 <body>
 	<script>
