--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
 	<title>pixi.js example 15 - Filters</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link rel="stylesheet" href="style/foundation.min.css" />
+	<link rel="stylesheet" href="style/normalize.css" />
 	<script type="text/javascript" src="js/pixi.js"></script>
 	<script type="text/javascript" src="js/howler.min.js"></script>
 	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="js/vendor/modernizr.js"></script>
+	<script type="text/javascript" src="js/foundation/foundation.js"></script>
+	<script type="text/javascript" src="js/foundation/foundation.reveal.js"></script>
 	<script type="text/javascript" src="javascript/main.js"></script>
 	<script type="text/javascript" src="javascript/key.js"></script>
 	<script type="text/javascript" src="javascript/setup.js"></script>
