--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 </head>
 <body>
 	<script>
+		$(document).foundation();
+	</script>
+	<div id="ToolsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+		<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
+	</div>
+	<script>
 		init()
 	</script>
 	</body>
