--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	</script>
 	<div id="ToolsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 		<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
+		<button type="submit" id="cleanScreen">Clean</button>
 	</div>
 	<script>
 		init()
