--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script type="text/javascript" src="javascript/tools/Phaser.js"></script>
 	<script type="text/javascript" src="javascript/tools/Stamper.js"></script>
 	<script type="text/javascript" src="javascript/Animator.js"></script>
-	<script type="text/javascript" src="javascript/Explosion.js"></script>
+	<script type="text/javascript" src="javascript/Exploder.js"></script>
 </head>
 <body>
 	<script>
