initial version of termites

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<script type="text/javascript" src="javascript/tools/Stamper.js"></script>
 	<script type="text/javascript" src="javascript/Animator.js"></script>
 	<script type="text/javascript" src="javascript/Exploder.js"></script>
+	<script type="text/javascript" src="javascript/tools/Termites.js"></script>
 </head>
 <body>
 	<script>
