--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 	<div id="ToolsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 		<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
 		<button type="submit" id="cleanScreen">Clean</button>
+		<p><a href="#" data-reveal-id="secondModal" class="secondary button">Options</a></p>
+	</div>
+	<div id="secondModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
+		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
 	</div>
 	<script>
 		init()
