--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
 	<div id="ToolsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 		<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
 		<button type="submit" id="cleanScreen">Clean</button>
-		<p><a href="#" data-reveal-id="secondModal" class="secondary button">Options</a></p>
+		<p><a href="#" data-reveal-id="optionsModal" class="secondary button">Options</a></p>
 	</div>
-	<div id="secondModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
+	<div id="optionsModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
 		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+		<h2 id="firstModalTitle">Options</h2>
+		<hr/>
+		<h3 id="firstModalTitle">Choose a color</h3>
+		<div id="colorChooser"></div>
+		<h3 id="firstModalTitle">Choose a background image</h3>
 	</div>
 	<script>
 		init()
