--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div id="ToolsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 		<div id="ToolsMenuContainer"><table id="ToolsMenu"></table></div>
 		<button type="submit" id="cleanScreen">Clean</button>
-		<p><a href="#" data-reveal-id="optionsModal" class="secondary button">Options</a></p>
+		<p><a href="#" id="optionsModalButton" data-reveal-id="optionsModal" class="secondary button">Options</a></p>
 	</div>
 	<div id="optionsModal" class="reveal-modal" data-reveal aria-labelledby="secondModalTitle" aria-hidden="true" role="dialog">
 		<a class="close-reveal-modal" aria-label="Close">&#215;</a>
